@@ -1,3 +1,9 @@
+linuxmuster-webui7 (17.2.19.2) lmn72-testing; urgency=low
+
+  * Fixed to load kerberos environment and schoolmanager only if installed
+
+ -- Andreas Till <andreas.till@netzint.de>  Mon, 15 May 2023 17:47:12 +0200
+
 linuxmuster-webui7 (17.2.19.1) lmn72-testing; urgency=low
 
   * Added Multischool bugfixes and updated system dependencies
